--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.6.6",
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "next": "12.2.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "reksai": "^0.1.5",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.0.5",
