--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.6.6",
+    "@prisma/client": "^4.3.1",
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "next": "12.2.2",
@@ -31,6 +32,7 @@
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "postcss": "^8.4.14",
+    "prisma": "^4.3.1",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
