--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.6.6",
     "@prisma/client": "^4.3.1",
     "axios": "^0.27.2",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^6.5.1",
     "next": "12.2.2",
     "react": "18.2.0",
