--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.6.6",
+    "@nextui-org/react": "^1.0.0-beta.10",
     "@prisma/client": "^4.3.1",
     "axios": "^0.27.2",
     "font-awesome": "^4.7.0",
