--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "@headlessui/react": "^1.7.2",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@prisma/client": "^4.4.0",
+    "@tanstack/react-query": "^4.10.3",
+    "@trpc/client": "^10.0.0-proxy-beta.17",
+    "@trpc/next": "^10.0.0-proxy-beta.17",
+    "@trpc/react": "^10.0.0-proxy-beta.17",
+    "@trpc/server": "^10.0.0-proxy-beta.17",
     "axios": "^0.27.2",
     "font-awesome": "^4.7.0",
     "framer-motion": "^6.5.1",
@@ -35,7 +40,7 @@
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
     "postcss": "^8.4.14",
-    "prisma": "^4.3.1",
+    "prisma": "^4.4.0",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
