--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "reksai": "^0.1.5",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/node": "18.0.5",
