--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.2",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@prisma/client": "^4.4.0",
+    "@radix-ui/react-hover-card": "^1.0.0",
     "@tanstack/react-query": "^4.10.3",
     "@trpc/client": "^10.0.0-proxy-beta.17",
     "@trpc/next": "^10.0.0-proxy-beta.17",
@@ -31,6 +32,7 @@
     "react-router-dom": "^6.3.0",
     "reksai": "^0.1.5",
     "swr": "^1.3.0",
+    "tailwindcss-radix": "^2.6.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
